front-envoy/01-envoy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy
  namespace: envoy
  labels:
    prometheus-scrape: "true"
spec:
  type: LoadBalancer
  selector:
    app: envoy
  ports:
  - name: https
    protocol: TCP
    port: 8443
    targetPort: 8443
  - name: admin
    protocol: TCP
    port: 8090
    targetPort: 8090
